// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildSchema field type mapping should create a bigint validator 1`] = `
{
  "data": {
    "big": 999n,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a boolean validator 1`] = `
{
  "data": {
    "flag": true,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a boolean validator 2`] = `
{
  "data": {
    "flag": false,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a date validator 1`] = `
{
  "data": {
    "at": 2024-01-01T00:00:00.000Z,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a float validator 1`] = `
{
  "data": {
    "price": 3.14,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a float validator 2`] = `
{
  "data": {
    "price": 42,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a string validator 1`] = `
{
  "data": {
    "name": "hello",
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a url validator 1`] = `
{
  "data": {
    "link": "https://example.com",
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create a uuid validator 1`] = `
{
  "data": {
    "id": "550e8400-e29b-41d4-a716-446655440000",
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create an array validator 1`] = `
{
  "data": {
    "items": [
      1,
      "two",
      true,
    ],
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create an email validator 1`] = `
{
  "data": {
    "email": "test@example.com",
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create an enum validator 1`] = `
{
  "data": {
    "status": "active",
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create an integer validator 1`] = `
{
  "data": {
    "count": 42,
  },
  "success": true,
}
`;

exports[`buildSchema field type mapping should create an object validator 1`] = `
{
  "data": {
    "data": {
      "a": 1,
    },
  },
  "success": true,
}
`;

exports[`buildSchema multiple fields should validate an object with multiple fields of different types 1`] = `
{
  "data": {
    "active": true,
    "age": 30,
    "name": "Alice",
  },
  "success": true,
}
`;

exports[`buildSchema validation errors should produce meaningful error output on failure 1`] = `
[
  {
    "code": "invalid_format",
    "format": "email",
    "message": "Invalid email address",
    "origin": "string",
    "path": [
      "email",
    ],
    "pattern": "/^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$/",
  },
  {
    "code": "too_small",
    "inclusive": true,
    "message": "Too small: expected number to be >=1",
    "minimum": 1,
    "origin": "number",
    "path": [
      "count",
    ],
  },
]
`;
